@@ -10,6 +10,7 @@ import ru.game.aurora.application.CommonRandom;
 import ru.game.aurora.npc.AlienRace;
 import ru.game.aurora.player.research.ResearchReport;
 import ru.game.aurora.player.research.projects.ArtifactResearch;
+import ru.game.aurora.world.World;
 import ru.game.aurora.world.planet.*;
 import ru.game.aurora.world.space.earth.Earth;
 
@@ -28,7 +29,7 @@ public class HomeworldGenerator {
         // todo: gas giants and other planets
 
         Planet[] planets = new Planet[4];
-        StarSystem ss = new StarSystem(new StarSystem.Star(2, Color.yellow), 9, 9);
+        StarSystem ss = new StarSystem("Solar system", new StarSystem.Star(2, Color.yellow), 9, 9);
 
         // mercury
         planets[0] = new Planet(ss, PlanetCategory.PLANET_ROCK, PlanetAtmosphere.NO_ATMOSPHERE, 4, 0, 0, false);
@@ -58,9 +59,9 @@ public class HomeworldGenerator {
     }
 
 
-    public static StarSystem generateKliskHomeworld(int x, int y, AlienRace kliskRace) {
+    public static StarSystem generateKliskHomeworld(World world, int x, int y, AlienRace kliskRace) {
         BasePlanet[] planets = new BasePlanet[3];
-        StarSystem ss = new StarSystem(new StarSystem.Star(2, Color.yellow), x, y);
+        StarSystem ss = new StarSystem(world.getStarSystemNamesCollection().popName(), new StarSystem.Star(2, Color.yellow), x, y);
 
         planets[0] = new Planet(ss, PlanetCategory.PLANET_ROCK, PlanetAtmosphere.NO_ATMOSPHERE, 4, 0, 0, false);
         setCoord(planets[0], 2);
